Fix input label vertical alignment.

--- a/css/napster.css
+++ b/css/napster.css
@@ -634,6 +634,12 @@ table tr:hover td.icon-remove
 	width				: auto;
 }
 
+/***** Override Bootstrap label alignment *****/
+
+label
+{
+	line-height: 30px;
+}
 
 
 
